<resources>

    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>


    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>


    <string name="back_button_description">Назад</string>
    <string name="share_icon_description">Иконка поделиться</string>
    <string name="support_icon_description">Иконка поддержки</string>
    <string name="agreement_icon_description">Иконка соглашения</string>
    <string name="forward_arrow_description">Перейти вперед</string>
</resources>