<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/title_padding_start"
        android:paddingTop="@dimen/title_padding_top"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/main_padding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediaLibraryButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/media_library"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

</LinearLayout>